uplink-hub/deploy/staging/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: staging
  labels:
    app: auth
spec:
  replicas: 3
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: nickdodson/auth-service:1.0.1
        ports:
          - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: staging
spec:
  type: ClusterIP
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
