uplink-hub/deploy/staging/media.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-deployment
  labels:
    app: media
spec:
  replicas: 3
  selector:
    matchLabels:
      app: media
  template:
    metadata:
      labels:
        app: media
    spec:
      containers:
      - name: media
        image: nickdodson/media-service:1.0.0
        ports:
          - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: media-service
spec:
  type: ClusterIP
  selector:
    app: media
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
